--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/public/projects/Icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>beautiful-portfolio</title>
+    <title>Jonathan's Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
